feat: add custom bson decoder for aculei image struct
